--- a/vrt/report-playwright.html
+++ b/vrt/report-playwright.html
@@ -7,7 +7,7 @@
       <body>
           <h1>Report for 
                <a href="http://localhost:2368/ghost"> http://localhost:2368/ghost</a>
-              with playwright 🎭
+              with Playwright 🎭
           </h1>
           <div id="visualizer">
               <div class=" scenario" id="test0">
@@ -36,7 +36,7 @@
       <p><b>Dimension Difference:</b> {"width":0,"height":0}</p></br>
       <p><b>MisMatch Percentage:</b> 0.01</p></br>
       <p><b>Diff Bounds:</b> {"top":296,"left":491,"bottom":309,"right":502}</p></br>
-      <p><b>Analysis Time:</b> 43</p></br>
+      <p><b>Analysis Time:</b> 44</p></br>
     </div>
     <div class="imgcontainer">
       <span class="imgname">Diff</span>
@@ -63,7 +63,7 @@
       <p><b>Dimension Difference:</b> {"width":0,"height":0}</p></br>
       <p><b>MisMatch Percentage:</b> 1.62</p></br>
       <p><b>Diff Bounds:</b> {"top":27,"left":20,"bottom":653,"right":1126}</p></br>
-      <p><b>Analysis Time:</b> 135</p></br>
+      <p><b>Analysis Time:</b> 113</p></br>
     </div>
     <div class="imgcontainer">
       <span class="imgname">Diff</span>
@@ -90,7 +90,7 @@
       <p><b>Dimension Difference:</b> {"width":0,"height":0}</p></br>
       <p><b>MisMatch Percentage:</b> 2.51</p></br>
       <p><b>Diff Bounds:</b> {"top":40,"left":20,"bottom":683,"right":1197}</p></br>
-      <p><b>Analysis Time:</b> 101</p></br>
+      <p><b>Analysis Time:</b> 102</p></br>
     </div>
     <div class="imgcontainer">
       <span class="imgname">Diff</span>
@@ -117,7 +117,7 @@
       <p><b>Dimension Difference:</b> {"width":0,"height":0}</p></br>
       <p><b>MisMatch Percentage:</b> 0.00</p></br>
       <p><b>Diff Bounds:</b> {"top":720,"left":1280,"bottom":0,"right":0}</p></br>
-      <p><b>Analysis Time:</b> 92</p></br>
+      <p><b>Analysis Time:</b> 93</p></br>
     </div>
     <div class="imgcontainer">
       <span class="imgname">Diff</span>
@@ -144,7 +144,7 @@
       <p><b>Dimension Difference:</b> {"width":0,"height":0}</p></br>
       <p><b>MisMatch Percentage:</b> 0.70</p></br>
       <p><b>Diff Bounds:</b> {"top":151,"left":376,"bottom":186,"right":644}</p></br>
-      <p><b>Analysis Time:</b> 104</p></br>
+      <p><b>Analysis Time:</b> 102</p></br>
     </div>
     <div class="imgcontainer">
       <span class="imgname">Diff</span>
@@ -171,7 +171,7 @@
       <p><b>Dimension Difference:</b> {"width":0,"height":0}</p></br>
       <p><b>MisMatch Percentage:</b> 2.17</p></br>
       <p><b>Diff Bounds:</b> {"top":151,"left":20,"bottom":699,"right":644}</p></br>
-      <p><b>Analysis Time:</b> 98</p></br>
+      <p><b>Analysis Time:</b> 97</p></br>
     </div>
     <div class="imgcontainer">
       <span class="imgname">Diff</span>
@@ -198,7 +198,7 @@
       <p><b>Dimension Difference:</b> {"width":0,"height":0}</p></br>
       <p><b>MisMatch Percentage:</b> 3.98</p></br>
       <p><b>Diff Bounds:</b> {"top":40,"left":20,"bottom":699,"right":1197}</p></br>
-      <p><b>Analysis Time:</b> 103</p></br>
+      <p><b>Analysis Time:</b> 107</p></br>
     </div>
     <div class="imgcontainer">
       <span class="imgname">Diff</span>
@@ -225,11 +225,315 @@
       <p><b>Dimension Difference:</b> {"width":0,"height":0}</p></br>
       <p><b>MisMatch Percentage:</b> 6.25</p></br>
       <p><b>Diff Bounds:</b> {"top":30,"left":5,"bottom":699,"right":1231}</p></br>
-      <p><b>Analysis Time:</b> 98</p></br>
+      <p><b>Analysis Time:</b> 99</p></br>
     </div>
     <div class="imgcontainer">
       <span class="imgname">Diff</span>
       <img class="imgfull" src="../playwright/screenshots/comparison/F01/8.png" id="diffImage" label="Diff">
+    </div>
+  </div>
+  </div>
+</div>,<div class=" scenario" id="test0">
+  <div class=" btitle">
+      <h2>Scenario: F05</h2>
+  </div>
+  <div id="visualizer">
+    
+  <div class=" btitle">
+    <h3>Step 1</h3>
+  </div>
+  <div class="imgline">
+    <div class="imgcontainer">
+      <span class="imgname">v. 3.3.0</span>
+      <img class="img2" src="../playwright/screenshots/3.3.0/F05/1.png" id="refImage" label="Reference">
+    </div>
+    <div class="imgcontainer">
+      <span class="imgname">v. 3.42.5</span>
+      <img class="img2" src="../playwright/screenshots/3.42.5/F05/1.png" id="testImage" label="Test">
+    </div>
+  </div>
+  <div class="imgline">
+    <div class="datacontainer">
+      <span class="imgname">Data</span>
+      <p><b>Is Same Dimensions:</b> true</p></br>
+      <p><b>Dimension Difference:</b> {"width":0,"height":0}</p></br>
+      <p><b>MisMatch Percentage:</b> 0.01</p></br>
+      <p><b>Diff Bounds:</b> {"top":296,"left":491,"bottom":309,"right":502}</p></br>
+      <p><b>Analysis Time:</b> 108</p></br>
+    </div>
+    <div class="imgcontainer">
+      <span class="imgname">Diff</span>
+      <img class="imgfull" src="../playwright/screenshots/comparison/F05/1.png" id="diffImage" label="Diff">
+    </div>
+  </div>,
+  <div class=" btitle">
+    <h3>Step 2</h3>
+  </div>
+  <div class="imgline">
+    <div class="imgcontainer">
+      <span class="imgname">v. 3.3.0</span>
+      <img class="img2" src="../playwright/screenshots/3.3.0/F05/2.png" id="refImage" label="Reference">
+    </div>
+    <div class="imgcontainer">
+      <span class="imgname">v. 3.42.5</span>
+      <img class="img2" src="../playwright/screenshots/3.42.5/F05/2.png" id="testImage" label="Test">
+    </div>
+  </div>
+  <div class="imgline">
+    <div class="datacontainer">
+      <span class="imgname">Data</span>
+      <p><b>Is Same Dimensions:</b> true</p></br>
+      <p><b>Dimension Difference:</b> {"width":0,"height":0}</p></br>
+      <p><b>MisMatch Percentage:</b> 1.77</p></br>
+      <p><b>Diff Bounds:</b> {"top":195,"left":20,"bottom":654,"right":1154}</p></br>
+      <p><b>Analysis Time:</b> 108</p></br>
+    </div>
+    <div class="imgcontainer">
+      <span class="imgname">Diff</span>
+      <img class="imgfull" src="../playwright/screenshots/comparison/F05/2.png" id="diffImage" label="Diff">
+    </div>
+  </div>,
+  <div class=" btitle">
+    <h3>Step 3</h3>
+  </div>
+  <div class="imgline">
+    <div class="imgcontainer">
+      <span class="imgname">v. 3.3.0</span>
+      <img class="img2" src="../playwright/screenshots/3.3.0/F05/3.png" id="refImage" label="Reference">
+    </div>
+    <div class="imgcontainer">
+      <span class="imgname">v. 3.42.5</span>
+      <img class="img2" src="../playwright/screenshots/3.42.5/F05/3.png" id="testImage" label="Test">
+    </div>
+  </div>
+  <div class="imgline">
+    <div class="datacontainer">
+      <span class="imgname">Data</span>
+      <p><b>Is Same Dimensions:</b> true</p></br>
+      <p><b>Dimension Difference:</b> {"width":0,"height":0}</p></br>
+      <p><b>MisMatch Percentage:</b> 2.80</p></br>
+      <p><b>Diff Bounds:</b> {"top":40,"left":5,"bottom":683,"right":1231}</p></br>
+      <p><b>Analysis Time:</b> 102</p></br>
+    </div>
+    <div class="imgcontainer">
+      <span class="imgname">Diff</span>
+      <img class="imgfull" src="../playwright/screenshots/comparison/F05/3.png" id="diffImage" label="Diff">
+    </div>
+  </div>,
+  <div class=" btitle">
+    <h3>Step 4</h3>
+  </div>
+  <div class="imgline">
+    <div class="imgcontainer">
+      <span class="imgname">v. 3.3.0</span>
+      <img class="img2" src="../playwright/screenshots/3.3.0/F05/4.png" id="refImage" label="Reference">
+    </div>
+    <div class="imgcontainer">
+      <span class="imgname">v. 3.42.5</span>
+      <img class="img2" src="../playwright/screenshots/3.42.5/F05/4.png" id="testImage" label="Test">
+    </div>
+  </div>
+  <div class="imgline">
+    <div class="datacontainer">
+      <span class="imgname">Data</span>
+      <p><b>Is Same Dimensions:</b> true</p></br>
+      <p><b>Dimension Difference:</b> {"width":0,"height":0}</p></br>
+      <p><b>MisMatch Percentage:</b> 0.00</p></br>
+      <p><b>Diff Bounds:</b> {"top":720,"left":1280,"bottom":0,"right":0}</p></br>
+      <p><b>Analysis Time:</b> 93</p></br>
+    </div>
+    <div class="imgcontainer">
+      <span class="imgname">Diff</span>
+      <img class="imgfull" src="../playwright/screenshots/comparison/F05/4.png" id="diffImage" label="Diff">
+    </div>
+  </div>,
+  <div class=" btitle">
+    <h3>Step 5</h3>
+  </div>
+  <div class="imgline">
+    <div class="imgcontainer">
+      <span class="imgname">v. 3.3.0</span>
+      <img class="img2" src="../playwright/screenshots/3.3.0/F05/5.png" id="refImage" label="Reference">
+    </div>
+    <div class="imgcontainer">
+      <span class="imgname">v. 3.42.5</span>
+      <img class="img2" src="../playwright/screenshots/3.42.5/F05/5.png" id="testImage" label="Test">
+    </div>
+  </div>
+  <div class="imgline">
+    <div class="datacontainer">
+      <span class="imgname">Data</span>
+      <p><b>Is Same Dimensions:</b> true</p></br>
+      <p><b>Dimension Difference:</b> {"width":0,"height":0}</p></br>
+      <p><b>MisMatch Percentage:</b> 0.68</p></br>
+      <p><b>Diff Bounds:</b> {"top":151,"left":376,"bottom":186,"right":639}</p></br>
+      <p><b>Analysis Time:</b> 98</p></br>
+    </div>
+    <div class="imgcontainer">
+      <span class="imgname">Diff</span>
+      <img class="imgfull" src="../playwright/screenshots/comparison/F05/5.png" id="diffImage" label="Diff">
+    </div>
+  </div>,
+  <div class=" btitle">
+    <h3>Step 6</h3>
+  </div>
+  <div class="imgline">
+    <div class="imgcontainer">
+      <span class="imgname">v. 3.3.0</span>
+      <img class="img2" src="../playwright/screenshots/3.3.0/F05/6.png" id="refImage" label="Reference">
+    </div>
+    <div class="imgcontainer">
+      <span class="imgname">v. 3.42.5</span>
+      <img class="img2" src="../playwright/screenshots/3.42.5/F05/6.png" id="testImage" label="Test">
+    </div>
+  </div>
+  <div class="imgline">
+    <div class="datacontainer">
+      <span class="imgname">Data</span>
+      <p><b>Is Same Dimensions:</b> true</p></br>
+      <p><b>Dimension Difference:</b> {"width":0,"height":0}</p></br>
+      <p><b>MisMatch Percentage:</b> 2.70</p></br>
+      <p><b>Diff Bounds:</b> {"top":40,"left":5,"bottom":683,"right":1231}</p></br>
+      <p><b>Analysis Time:</b> 100</p></br>
+    </div>
+    <div class="imgcontainer">
+      <span class="imgname">Diff</span>
+      <img class="imgfull" src="../playwright/screenshots/comparison/F05/6.png" id="diffImage" label="Diff">
+    </div>
+  </div>,
+  <div class=" btitle">
+    <h3>Step 7</h3>
+  </div>
+  <div class="imgline">
+    <div class="imgcontainer">
+      <span class="imgname">v. 3.3.0</span>
+      <img class="img2" src="../playwright/screenshots/3.3.0/F05/7.png" id="refImage" label="Reference">
+    </div>
+    <div class="imgcontainer">
+      <span class="imgname">v. 3.42.5</span>
+      <img class="img2" src="../playwright/screenshots/3.42.5/F05/7.png" id="testImage" label="Test">
+    </div>
+  </div>
+  <div class="imgline">
+    <div class="datacontainer">
+      <span class="imgname">Data</span>
+      <p><b>Is Same Dimensions:</b> true</p></br>
+      <p><b>Dimension Difference:</b> {"width":0,"height":0}</p></br>
+      <p><b>MisMatch Percentage:</b> 2.70</p></br>
+      <p><b>Diff Bounds:</b> {"top":40,"left":5,"bottom":683,"right":1231}</p></br>
+      <p><b>Analysis Time:</b> 105</p></br>
+    </div>
+    <div class="imgcontainer">
+      <span class="imgname">Diff</span>
+      <img class="imgfull" src="../playwright/screenshots/comparison/F05/7.png" id="diffImage" label="Diff">
+    </div>
+  </div>,
+  <div class=" btitle">
+    <h3>Step 8</h3>
+  </div>
+  <div class="imgline">
+    <div class="imgcontainer">
+      <span class="imgname">v. 3.3.0</span>
+      <img class="img2" src="../playwright/screenshots/3.3.0/F05/8.png" id="refImage" label="Reference">
+    </div>
+    <div class="imgcontainer">
+      <span class="imgname">v. 3.42.5</span>
+      <img class="img2" src="../playwright/screenshots/3.42.5/F05/8.png" id="testImage" label="Test">
+    </div>
+  </div>
+  <div class="imgline">
+    <div class="datacontainer">
+      <span class="imgname">Data</span>
+      <p><b>Is Same Dimensions:</b> true</p></br>
+      <p><b>Dimension Difference:</b> {"width":0,"height":0}</p></br>
+      <p><b>MisMatch Percentage:</b> 0.68</p></br>
+      <p><b>Diff Bounds:</b> {"top":151,"left":376,"bottom":186,"right":639}</p></br>
+      <p><b>Analysis Time:</b> 97</p></br>
+    </div>
+    <div class="imgcontainer">
+      <span class="imgname">Diff</span>
+      <img class="imgfull" src="../playwright/screenshots/comparison/F05/8.png" id="diffImage" label="Diff">
+    </div>
+  </div>,
+  <div class=" btitle">
+    <h3>Step 9</h3>
+  </div>
+  <div class="imgline">
+    <div class="imgcontainer">
+      <span class="imgname">v. 3.3.0</span>
+      <img class="img2" src="../playwright/screenshots/3.3.0/F05/9.png" id="refImage" label="Reference">
+    </div>
+    <div class="imgcontainer">
+      <span class="imgname">v. 3.42.5</span>
+      <img class="img2" src="../playwright/screenshots/3.42.5/F05/9.png" id="testImage" label="Test">
+    </div>
+  </div>
+  <div class="imgline">
+    <div class="datacontainer">
+      <span class="imgname">Data</span>
+      <p><b>Is Same Dimensions:</b> true</p></br>
+      <p><b>Dimension Difference:</b> {"width":0,"height":0}</p></br>
+      <p><b>MisMatch Percentage:</b> 2.15</p></br>
+      <p><b>Diff Bounds:</b> {"top":151,"left":20,"bottom":699,"right":639}</p></br>
+      <p><b>Analysis Time:</b> 102</p></br>
+    </div>
+    <div class="imgcontainer">
+      <span class="imgname">Diff</span>
+      <img class="imgfull" src="../playwright/screenshots/comparison/F05/9.png" id="diffImage" label="Diff">
+    </div>
+  </div>,
+  <div class=" btitle">
+    <h3>Step 10</h3>
+  </div>
+  <div class="imgline">
+    <div class="imgcontainer">
+      <span class="imgname">v. 3.3.0</span>
+      <img class="img2" src="../playwright/screenshots/3.3.0/F05/10.png" id="refImage" label="Reference">
+    </div>
+    <div class="imgcontainer">
+      <span class="imgname">v. 3.42.5</span>
+      <img class="img2" src="../playwright/screenshots/3.42.5/F05/10.png" id="testImage" label="Test">
+    </div>
+  </div>
+  <div class="imgline">
+    <div class="datacontainer">
+      <span class="imgname">Data</span>
+      <p><b>Is Same Dimensions:</b> true</p></br>
+      <p><b>Dimension Difference:</b> {"width":0,"height":0}</p></br>
+      <p><b>MisMatch Percentage:</b> 3.81</p></br>
+      <p><b>Diff Bounds:</b> {"top":40,"left":5,"bottom":699,"right":1197}</p></br>
+      <p><b>Analysis Time:</b> 103</p></br>
+    </div>
+    <div class="imgcontainer">
+      <span class="imgname">Diff</span>
+      <img class="imgfull" src="../playwright/screenshots/comparison/F05/10.png" id="diffImage" label="Diff">
+    </div>
+  </div>,
+  <div class=" btitle">
+    <h3>Step 11</h3>
+  </div>
+  <div class="imgline">
+    <div class="imgcontainer">
+      <span class="imgname">v. 3.3.0</span>
+      <img class="img2" src="../playwright/screenshots/3.3.0/F05/11.png" id="refImage" label="Reference">
+    </div>
+    <div class="imgcontainer">
+      <span class="imgname">v. 3.42.5</span>
+      <img class="img2" src="../playwright/screenshots/3.42.5/F05/11.png" id="testImage" label="Test">
+    </div>
+  </div>
+  <div class="imgline">
+    <div class="datacontainer">
+      <span class="imgname">Data</span>
+      <p><b>Is Same Dimensions:</b> true</p></br>
+      <p><b>Dimension Difference:</b> {"width":0,"height":0}</p></br>
+      <p><b>MisMatch Percentage:</b> 5.36</p></br>
+      <p><b>Diff Bounds:</b> {"top":40,"left":5,"bottom":699,"right":1231}</p></br>
+      <p><b>Analysis Time:</b> 110</p></br>
+    </div>
+    <div class="imgcontainer">
+      <span class="imgname">Diff</span>
+      <img class="imgfull" src="../playwright/screenshots/comparison/F05/11.png" id="diffImage" label="Diff">
     </div>
   </div>
   </div>
